# VSCodeCPPBoilerplate

./: .gitignore  CMakeLists.txt  README.md  makeAll.sh
src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  singleton.hpp  templateClasses.cpp
test/: CMakeLists.txt  dummy_tests.cpp
